deployment/sentry-cron-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-cron-deployment
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-cron
    name: sentry-cron-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        layer: f-paas
        env: all
        app: sentry-cron
        name: sentry-cron-server
    spec:
      containers:
      - name: sentry-cron
        image: sentry:latest
        imagePullPolicy: IfNotPresent
        command: ["sentry","run","cron"]
  selector:
    matchLabels:
      app: sentry-cron
