deployment/sentry-worker-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-worker-deployment
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-worker
    name: sentry-worker-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        layer: f-paas
        env: all
        app: sentry-worker
        name: sentry-worker-server
    spec:
      containers:
      - name: sentry-worker
        image: sentry:latest
        imagePullPolicy: IfNotPresent
        command: ["sentry","run","worker"]
  selector:
    matchLabels:
      app: sentry-worker
