deployment/sentry-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-deployment
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry
    name: sentry-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        layer: f-paas
        env: all
        app: sentry
        name: sentry-server
    spec:
      containers:
      - name: sentry
        image: sentry:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9000
        volumeMounts:
          - mountPath: /var/lib/sentry/files
            name: data
      volumes:
      - name: data
        hostPath:
          path: /mnt/vdc/containers/sentry/files
  selector:
    matchLabels:
      app: sentry
---
kind: Service
apiVersion: v1
metadata:
  name: sentry-svc
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry
    name: sentry-server
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 30000
  selector:
    layer: f-paas
    env: all
    app: sentry
    name: sentry-server
