deployment/sentry-postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-postgres-deployment
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-postgres
    name: sentry-postgres-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        layer: f-paas
        env: all
        app: sentry-postgres
        name: sentry-postgres-server
    spec:
      containers:
        - name: sentry-postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          hostPath:
            path: /mnt/vdc/containers/sentry-postgres/data
  selector:
    matchLabels:
      app: sentry-postgres

---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-postgres
    name: sentry-postgres-server
spec:
  #  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
  #    nodePort: 6379
  selector:
    layer: f-paas
    env: all
    app: sentry-postgres
    name: sentry-postgres-server
