deployment/sentry-redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentry-redis-deployment
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-redis
    name: sentry-redis-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        layer: f-paas
        env: all
        app: sentry-redis
        name: sentry-redis-server
    spec:
      containers:
        - name: sentry-redis
          image: redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
      volumes:
        - name: data
          hostPath:
            path: /mnt/vdc/containers/sentry-redis
  selector:
    matchLabels:
      app: sentry-redis

---
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: f-paas
  labels:
    layer: f-paas
    env: all
    app: sentry-redis
    name: sentry-redis-server
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    layer: f-paas
    env: all
    app: sentry-redis
    name: sentry-redis-server
